--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4"
+
+
+[dependencies.mongodb]
+version = "2.8.0"
+features = ["tokio-runtime"]
