--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+serde = "1"
+serde_json = "1"
+jsonwebtoken = "9"
+dotenv = "0.15"
 
 
 [dependencies.mongodb]
