--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,9 @@ serde_json = "1"
 jsonwebtoken = "9"
 dotenv = "0.15"
 
+[dev-dependencies]
+mockall = "0.12"
+cargo-llvm-cov = "0.6.6"
 
 [dependencies.mongodb]
 version = "2.8.0"
