--- a/backend/database/Cargo.toml
+++ b/backend/database/Cargo.toml
@@ -1,25 +1,18 @@
-[workspace]
-members = [
-	"database",
-]
-
 [package]
-name = "backend"
+name = "database"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
-actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-jsonwebtoken = "9"
 dotenv = "0.15"
-database = { path = "./database" }
+tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 mockall = "0.12"
 cargo-llvm-cov = "0.6.6"
+
 
 [dependencies.mongodb]
 version = "2.8.0"
