--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 jsonwebtoken = "9"
 dotenv = "0.15"
+argon2 = "0.5"
+rand = "0.8"
 database = { path = "./database" }
 
 [dev-dependencies]
@@ -24,3 +26,10 @@ cargo-llvm-cov = "0.6.6"
 [dependencies.mongodb]
 version = "2.8.0"
 features = ["tokio-runtime"]
+
+[dependencies.uuid]
+version = "1.7"
+features = [
+	"v7",
+	"serde"
+]
