--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "emailjs": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
