--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,6 +19,8 @@ argon2 = "0.5"
 rand = "0.8"
 database = { path = "./database" }
 hex = "0.4.3"
+cargo = "0.78.0"
+tokio = "1.36.0"
 
 [dev-dependencies]
 mockall = "0.12"
