--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/models.json --port 8000"
+    "server": "json-server --watch data/brands.json --port 8000"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
