--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@reduxjs/toolkit": "^2.2.2",
+    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.0",
     "axios": "^1.6.8",
     "emailjs": "^4.0.3",
     "json-server": "^1.0.0-alpha.23",
