--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/brands.json --port 8000"
+    "server": "json-server --watch data/cars.json --port 8000"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -25,12 +25,14 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-slider": "^2.0.6",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-slider": "^1.3.6",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
