--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.29.0",
     "axios": "^1.6.8",
     "emailjs": "^4.0.3",
+    "framer-motion": "^11.1.1",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
